# discord_music_bot

./: .env.dev  Dockerfile  compose.yml  pyproject.toml
bot/: chess_game.py  main.py
config/: config.py
music_catcher/: soundclound_catcher.py  spotify_catcher.py  youtube_catcher.py
scripts/: entrypoint-bot.sh
