[project]
name = "darkmusic-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "davey>=0.1.0",
    "discord>=2.3.2",
    "ffmpeg>=1.4",
    "pynacl>=1.5.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
    "yt-dlp>=2026.3.17",
]
